{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 18,
  "lineage": "ac1d3f77-12f6-6a04-1af5-74f213c1d9cc",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:130345159796:instance/i-040e5bc1281d82325",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040e5bc1281d82325",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a014ec44233d3caf",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-3-94-150-237.compute-1.amazonaws.com",
            "public_ip": "3.94.150.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b1a461a4001dd7bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de98e7d999dc5b76",
            "tags": {
              "Name": "terraform-aws-secure-bastion"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075482fa6b53ab725"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.bastion",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:130345159796:instance/i-0253ce51bedce6956",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0253ce51bedce6956",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0285bd59b24cc9672",
            "private_dns": "ip-10-0-2-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd718a9a235ec448",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0544d07a8395d6d3c",
            "tags": {
              "Name": "terraform-aws-secure-private"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4f0fbe008118d0b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.bastion",
            "module.security_group.aws_security_group.private",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:security-group/sg-075482fa6b53ab725",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075482fa6b53ab725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-aws-secure-bastion-sg",
            "name_prefix": "",
            "owner_id": "130345159796",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-aws-secure-bastion-sg"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:security-group/sg-0c4f0fbe008118d0b",
            "description": "Security group for private EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4f0fbe008118d0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-075482fa6b53ab725"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-aws-secure-private-sg",
            "name_prefix": "",
            "owner_id": "130345159796",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-aws-secure-private-sg"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_group.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e4e769036df760b",
            "arn": "arn:aws:ec2:us-east-1:130345159796:elastic-ip/eipalloc-09e4e769036df760b",
            "association_id": "eipassoc-00358f85311fde56b",
            "domain": "vpc",
            "id": "eipalloc-09e4e769036df760b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06c2c30a58bdc249c",
            "private_dns": "ip-10-0-1-73.ec2.internal",
            "private_ip": "10.0.1.73",
            "public_dns": "ec2-44-210-39-88.compute-1.amazonaws.com",
            "public_ip": "44.210.39.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e4e769036df760b",
            "association_id": "eipassoc-00358f85311fde56b",
            "connectivity_type": "public",
            "id": "nat-0c62bc2bac602bf86",
            "network_interface_id": "eni-06c2c30a58bdc249c",
            "private_ip": "10.0.1.73",
            "public_ip": "44.210.39.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de98e7d999dc5b76",
            "tags": {
              "Name": "terraform-aws-secure-nat"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:route-table/rtb-022c214734448d5ac",
            "id": "rtb-022c214734448d5ac",
            "owner_id": "130345159796",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c62bc2bac602bf86",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-aws-secure-private-rt"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat",
            "module.subnet.aws_nat_gateway.main",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:route-table/rtb-0645de106d409b6ed",
            "id": "rtb-0645de106d409b6ed",
            "owner_id": "130345159796",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa0c5f76f80037f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-aws-secure-public-rt"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd6ed079223fec28",
            "route_table_id": "rtb-022c214734448d5ac",
            "subnet_id": "subnet-0544d07a8395d6d3c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat",
            "module.subnet.aws_nat_gateway.main",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.private",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0451034776d6db9f6",
            "route_table_id": "rtb-0645de106d409b6ed",
            "subnet_id": "subnet-0de98e7d999dc5b76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:subnet/subnet-0544d07a8395d6d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0544d07a8395d6d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130345159796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-secure-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-private-subnet"
            },
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:subnet/subnet-0de98e7d999dc5b76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de98e7d999dc5b76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130345159796",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-aws-secure-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-public-subnet"
            },
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:internet-gateway/igw-0fa0c5f76f80037f9",
            "id": "igw-0fa0c5f76f80037f9",
            "owner_id": "130345159796",
            "tags": {
              "Name": "terraform-aws-secure-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-igw"
            },
            "vpc_id": "vpc-0320b7b84b1f4af93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130345159796:vpc/vpc-0320b7b84b1f4af93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070b0a716b44a5c86",
            "default_route_table_id": "rtb-00a3271cfc18c0a15",
            "default_security_group_id": "sg-02fddf0a8a0bca43c",
            "dhcp_options_id": "dopt-07bb25a5a2df35141",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0320b7b84b1f4af93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a3271cfc18c0a15",
            "owner_id": "130345159796",
            "tags": {
              "Name": "terraform-aws-secure-vpc"
            },
            "tags_all": {
              "Name": "terraform-aws-secure-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}